@@ -5,12 +5,17 @@
 plugins {
     id 'ink.anur.java-conventions'
     id 'org.jetbrains.kotlin.jvm' version '1.6.0'
+    id 'application'
 }
 
 dependencies {
     api project(':common')
     testImplementation 'org.jetbrains.kotlin:kotlin-test'
 }
+
+applicationDefaultJvmArgs = [
+        "--add-opens", "java.base/java.lang=ALL-UNNAMED"
+]
 
 description = 'server'
 repositories {
